# hslinq-core

./: README.md  hslinq-core.cabal
