name:                hslinq-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jason-johnson/hslinq-core#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Johnson
maintainer:          jason.johnson.081@gmail.com
copyright:           (C) 2017 Jason Johnson
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jason-johnson/hslinq-core
